# insurance-fairness

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  ausprivauto_fairness.py  benchmark.py  benchmark_sensitivity.py
examples/: bias_metrics.py  proxy_detection.py  quickstart.py
notebooks/: aidset_talk_demo.ipynb  ausprivauto_fairness_databricks.py  benchmark_double_fairness.py  capability_demo.py  databricks_test_privatized_audit.py  databricks_test_v038.py  databricks_validation.py  demo_diagnostics.py  demo_optimal_transport.py  fairness_audit_demo.py  intersectional_fairness_demo.py  pareto_optimisation_demo.py  quickstart.ipynb  run_all_tests_v060.py  run_double_fairness_tests.py  run_indirect_tests.py  run_intersectional_tests.py  run_marginal_fairness_tests.py  run_multicalibration_v067_tests.py  run_multicalibration_v071_tests.py  run_proxy_sufficiency_tests.py  run_proxy_vulnerability_tests.py  run_tests.py  run_tests_privatized.py  run_tests_privatized_pricer.py  sensitivity_demo.py
src/insurance_fairness/: __init__.py  _utils.py  audit.py  bias_metrics.py  counterfactual.py  discrimination_insensitive.py  double_fairness.py  indirect.py  intersectional.py  localized_parity.py  marginal_fairness.py  multi_state.py  multicalibration.py  optimal_ldp.py  pareto.py  privatized_audit.py  privatized_pricer.py  proxy_detection.py  proxy_vulnerability.py  report.py  tail_dp.py
src/insurance_fairness/diagnostics/: __init__.py  _admissible.py  _audit.py  _benchmarks.py  _local.py  _report.py  _shapley.py  _utils.py
src/insurance_fairness/optimal_transport/: __init__.py  causal.py  correction.py  pricing.py  report.py
src/insurance_fairness/sensitivity/: __init__.py  _measure.py  _shapley.py  _sobol.py
tests/: conftest.py  test_audit.py  test_bias_metrics.py  test_bias_metrics_gaps.py  test_counterfactual.py  test_coverage_expansion.py  test_diag_admissible.py  test_diag_audit.py  test_diag_benchmarks.py  test_diag_local.py  test_diag_report.py  test_diag_shapley.py  test_diag_utils.py  test_discrimination_insensitive.py  test_double_fairness.py  test_indirect.py  test_intersectional.py  test_localized_parity.py  test_marginal_fairness.py  test_multi_state.py  test_multicalibration.py  test_new_coverage.py  test_optimal_ldp.py  test_ot_causal.py  test_ot_correction.py  test_ot_pricing.py  test_ot_report.py  test_ot_sequential_corrector.py  test_ot_utils.py  test_ot_validators.py  test_p0_regressions.py  test_pareto.py  test_privatized_audit.py  test_privatized_pricer.py  test_proxy_detection.py  test_proxy_vulnerability.py  test_sensitivity.py  test_tail_dp.py  test_utils.py
