[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-fairness"
version = "0.6.7"
description = "Proxy discrimination auditing, discrimination-free pricing, and diagnostics for UK insurance pricing models. Implements FCA Consumer Duty and Equality Act 2010 compliance checks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "fairness",
    "proxy discrimination",
    "FCA",
    "actuarial",
    "pricing",
    "pareto",
    "nsga2",
    "multi-objective",
    "optimal-transport",
    "discrimination-free",
    "causal",
    "shapley",
    "double fairness",
    "consumer duty",
    "tchebycheff",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars>=1.0.0",
    "catboost>=1.2.7",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "scipy>=1.12",
    "jinja2>=3.1.0",
    "pyarrow>=14.0",
    # Added for optimal_transport subpackage
    "statsmodels>=0.14.5",
    "networkx>=3.0",
    "POT>=0.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pdoc>=14.0.0",
]
pareto = [
    "pymoo>=0.6.1",
]
plot = [
    "matplotlib>=3.7.0",
]
all = [
    "pymoo>=0.6.1",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://burning-cost.github.io/insurance-fairness"
Repository = "https://github.com/burning-cost/insurance-fairness"
Changelog = "https://github.com/burning-cost/insurance-fairness/releases"
Documentation = "https://burning-cost.github.io/insurance-fairness"
Issues = "https://github.com/burning-cost/insurance-fairness/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_fairness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
