[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-fairness"
version = "1.2.2"
description = "Proxy discrimination auditing, discrimination-free pricing, and fairness diagnostics for UK insurance pricing models under FCA Consumer Duty and Equality Act 2010."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "fairness",
    "proxy discrimination",
    "discrimination-free pricing",
    "FCA",
    "Consumer Duty",
    "actuarial",
    "pricing",
    "UK",
    "personal lines",
    "Equality Act",
    "protected characteristics",
    "disparate impact",
    "demographic parity",
    "multicalibration",
    "bias",
    "bias detection",
    "causal fairness",
    "pareto",
    "nsga2",
    "multi-objective",
    "optimal-transport",
    "shapley",
    "double fairness",
    "intersectional",
    "distance covariance",
    "FCA-Research-Note-ethnicity",
    "PS22/9",
    "fair value",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars>=1.0.0",
    "catboost>=1.2.7",
    "numpy>=2.0",
    "scikit-learn>=1.6",
    "scipy>=1.12",
    "jinja2>=3.1.0",
    "pyarrow>=14.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pdoc>=14.0.0",
    # LocalGLMMulticalibrationCorrector uses statsmodels.nonparametric.kernel_regression
    "statsmodels>=0.14.5",
    # to_markdown() uses tabulate for table formatting
    "tabulate>=0.9.0",
]
pareto = [
    "pymoo>=0.6.1",
]
plot = [
    "matplotlib>=3.7.0",
]
intersectional = [
    "dcor>=0.6",
]
all = [
    "pymoo>=0.6.1",
    "matplotlib>=3.7.0",
    "dcor>=0.6",
]

[project.urls]
Homepage = "https://burning-cost.github.io/libraries/insurance-fairness/"
Documentation = "https://burning-cost.github.io/libraries/insurance-fairness/"
Repository = "https://github.com/burning-cost/insurance-fairness"
"Bug Tracker" = "https://github.com/burning-cost/insurance-fairness/issues"
Changelog = "https://github.com/burning-cost/insurance-fairness/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_fairness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
